# Claude-scholar-extended

./: .gitignore  CLAUDE.md  CLAUDE.zh-CN.md  ENVIRONMENT_SETUP.md  MCP_SETUP.zh-CN.md  README.md  README.zh-CN.md  RESEARCH_PROPOSAL.md  claim-evidence-map.md  cluster-profile.json  compute-plan.md  experiment-plan.md  experiment-state.json  guide.md  hypotheses.md  literature-review.md  pipeline-v3-spec.md  settings.json.template
projects/sparse-hate-explain/: adversarial-novelty-report.md  adversarial-review-report.md  analysis-report.md  claim-alignment-report.md  claim-overlap-report.md  concurrent-work-report.md  cross-section-report.md  design-novelty-check.md  dry-run-analysis.md  experiment-plan.md  gap-detection-report.md  pyproject.toml
projects/sparse-hate-explain/.epistemic/: citation_ledger.json
projects/sparse-hate-explain/configs/: config.yaml
projects/sparse-hate-explain/docs/: analysis-report.md  contribution-positioning.md  cross-field-report.md  experiment-plan.md  novelty-assessment-reposition.md  novelty-assessment.md  novelty-reassessment.md  paper-blueprint.md  research-landscape.md  research-plan.md  validation-report.md
projects/sparse-hate-explain/manuscript/: claims_evidence.md  neurips_2026.sty  paper-quality-report.md
projects/sparse-hate-explain/results/: summary.csv
projects/sparse-hate-explain/scripts/: collect_results.py  compute_bootstrap_ci.py  download_data.sh  run_experiment.sh  run_full_evaluation.py  run_head_importance.py  run_head_importance.sh  run_statistical_analysis.py  select_random_heads.py  submit_experiments.py  submit_grid.sh  submit_phase3.sh  value_subspace_analysis.py
projects/sparse-hate-explain/src/: main.py
projects/sparse-rationale-constrained-attention-hate-speech/: .gitignore  COMPLETION_SUMMARY.md  EXECUTION-CHECKPOINT.md  IMPLEMENTATION-SUMMARY.md  Makefile  PIPELINE-COMPLETION-CHECKLIST.md  RECOVERY-STATUS.md  adversarial-novelty-report.md  citation-traversal-report.md  claim-overlap-report.md  compute-plan.md  concurrent-work-report.md  design-novelty-check.md  experiment-state.json  novelty-assessment.md  pyproject.toml  requirements.txt  research-landscape.md  run_experiment.py  train.py  validate-setup-report.md
projects/sparse-rationale-constrained-attention-hate-speech/.epistemic/: citation_ledger.json  evidence_registry.json  kill-decision.json
projects/sparse-rationale-constrained-attention-hate-speech/configs/: config.yaml
projects/sparse-rationale-constrained-attention-hate-speech/docs/: adversarial-novelty-report.md  adversarial-review.md  analysis-report.md  citation-traversal-report.md  claim-ledger.md  (+20 more)
rag-lit-synthesis/: Makefile  pyproject.toml
rag-lit-synthesis/configs/: config.yaml
rag-lit-synthesis/manuscript/: main.tex
rag-lit-synthesis/scripts/: run_experiment.sh
rag-lit-synthesis/src/: __init__.py  main.py  registry.py
rag-lit-synthesis/tests/: test_metrics.py
(+589 files in other folders)
